<resources>
    <string name="app_name_alpha">TAU App Beta</string>
    <string name="app_name_alpha_description">Freely Create Crypto Coins\nDecentral Serverless Network</string>
    <string name="app_name_alpha_desc">Open Source\n&amp; Blockchain Technology</string>
    <string name="app_share">Share app link via</string>
    <string name="app_share_content">Please join TAU network, an unrestricted and serverless social media from https://taucoin.io</string>
    <string name="app_share_news">Share news</string>
    <string name="app_share_error">Can\'t find share component to share</string>
    <string name="action_settings">Settings</string>
    <string name="common_balance_unit">TAU</string>
    <string name="common_numerical_value">0</string>
    <string name="common_install_browser">Please install mobile browser first!</string>
    <string name="common_parentheses">(%1$s)</string>
    <string name="common_proceed">Proceed</string>
    <string name="common_back">Back</string>
    <string name="common_slant">(%1$d/%2$d)</string>
    <string name="common_confirm">Confirm</string>
    <string name="common_submit">Submit</string>
    <string name="common_restart">Restart</string>
    <string name="common_retry">Retry</string>
    <string name="common_report">Report</string>
    <string name="common_report_exit">Report and Exit</string>
    <string name="common_percent">%1$d%%</string>
    <string name="common_unknown">Unknown</string>
    <string name="common_on">ON</string>
    <string name="common_off">OFF</string>
    <string name="common_setup">Setup</string>
    <string name="common_do_not_show">Do not show this dialog again</string>
    <string name="common_start">Start</string>
    <string name="common_yes">Yes</string>
    <string name="common_join">Join</string>
    <string name="common_joined">Joined</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="exit">Exit</string>
    <string name="common_default">Default</string>
    <string name="common_share">Share</string>
    <string name="common_later">Later</string>
    <string name="common_ignore">Ignore</string>
    <string name="common_accept">Accept</string>
    <string name="common_more">More</string>
    <string name="common_skip">Skip</string>
    <string name="common_chinese_not_supported">Sorry, Chinese is not supported!</string>
    <string name="common_close">Close</string>
    <string name="common_resend">Resend</string>
    <string name="common_done">Done</string>
    <string name="common_post">Post</string>
    <string name="common_retweet">Repost</string>
    <string name="common_retweet_other">Repost to other TAU community</string>
    <string name="common_share_external">Share to social media</string>
    <string name="common_delete">Delete</string>
    <string name="common_open">Open</string>
    <string name="open_navigation_drawer">Open navigation drawer</string>
    <string name="close_navigation_drawer">Close navigation drawer</string>
    <string name="main_title">Serverless &#038; Unrestricted</string>
    <string name="main_empty_title">Welcome to TAU</string>
    <string name="main_empty_add_friends">Add Friend</string>
    <string name="main_empty_create_communities">Create Coin Group</string>
    <string name="main_exit">Click again to exit the application!</string>
    <string name="main_community_name">%1$s - %2$s</string>
    <string name="main_community_chat">News Topic Chat</string>
    <string name="main_community_name_balance" formatted="false"><Data><![CDATA[%1$s(%2$s) <font color="#f19322">%3$s</font>]]></Data></string>
    <string name="main_community_name_discovered">%1$s - %2$s - Discovered</string>
    <string name="main_community_name_total">%1$s - %2$s(%3$d)</string>
    <string name="main_community_in_mining">In Mining &#8230;</string>
    <string name="main_community_non_member">Non Member</string>
    <string name="main_error_link">Invalid link!</string>
    <string name="main_error_link_yourself">Airdrop link published by yourself!</string>
    <string name="main_open_link">Open the link?</string>
    <string name="main_airdrop_link_peer" formatted="false"><Data><![CDATA[<font color="#000000">%1$s</font> sends you an airdrop link to receive free coins.]]></Data></string>
    <string name="main_chain_join_success" formatted="false"><Data><![CDATA[Welcome to join us. I\'m <font color="#000000">%1$s</font>, the creator of this community.]]></Data></string>
    <string name="main_system_positioning_switch">The system positioning switch needs to be turned on.</string>
    <string name="main_airdrop_link_share">Share link to airdrop to friends.</string>
    <string name="main_referral_link_create">Copy Link</string>
    <string name="main_referral_link_copy">Referral and Bonus Link copied</string>
    <string name="main_referral_link_text">Please send to your friends. When they click, you will receive %1$s coins as bonus, up to %2$s coins.</string>
    <string name="main_publish_video">Publish Video</string>
    <string name="main_community_settings">Community Settings</string>
    <string name="main_other_transaction">Other Transaction</string>
    <string name="main_no_messages">[No messages]</string>
    <string name="main_network_unavailable">Network connection unavailable</string>
    <string name="main_connecting">Connecting&#8230;</string>
    <string name="main_no_ipv4">IPv4 not found</string>
    <string name="main_data_used_up">Daily Data Limit Used - click to increase. </string>
    <string name="main_insufficient_device_space">Insufficient device space</string>
    <string name="main_paste_link">Paste Link</string>
    <string name="main_tab_all">Home</string>
    <string name="main_tab_community">Communities</string>
    <string name="main_tab_personal">Personal</string>
    <string name="main_operation_mark_read">Mark as Read</string>
    <string name="main_operation_mark_unread">Mark as UnRead</string>
    <string name="main_operation_sticky_top">Sticky on Top</string>
    <string name="main_operation_remove_top">Remove from Top</string>
    <string name="main_operation_ban_community">Ban this community</string>
    <string name="main_operation_share_community">Share Community</string>
    <string name="main_operation_ban_friend">Ban this friend</string>
    <string name="main_public_key">Address:%1$s</string>
    <string name="drawer_new_community">Create Coin</string>
    <string name="drawer_airdrop_links">Airdrop Coins</string>
    <string name="drawer_crypto_cities">Crypto Cities</string>
    <string name="drawer_tau_communities">TAU Communities</string>
    <string name="drawer_send_and_airdrop_coins">Airdrop Coins</string>
    <string name="drawer_balance">Balance</string>
    <string name="drawer_power">Power</string>
    <string name="drawer_balance_time">Interim Balance %1$s</string>
    <string name="drawer_balance_time_color" formatted="false"><Data><![CDATA[Interim Balance <font color="#f19322"><b>%1$s</b></font> Power %2$s]]></Data></string>
    <string name="drawer_balance_name_color" formatted="false"><Data><![CDATA[%1$s <font color="#f19322">%2$s</font>]]></Data></string>
    <string name="drawer_balance_time_no_title">%1$s on %2$s</string>
    <string name="drawer_balance_time_color_no_title" formatted="false"><Data><![CDATA[Interim Balance <font color="#f19322"><b>%1$s</b></font>]]></Data></string>
    <string name="drawer_community_coin">Community Coin</string>
    <string name="drawer_peers">Contacts</string>
    <string name="drawer_wallet">Wallet and Pay</string>
    <string name="drawer_paste_link">Paste Link</string>
    <string name="drawer_setting">Settings</string>
    <string name="drawer_official_telegram">Official Telegram</string>
    <string name="drawer_data_cost">Data Cost</string>
    <string name="drawer_working_condition">Dashboard</string>
    <string name="drawer_share">Share TAU App</string>
    <string name="menu_share">Share</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_alert">Alert</string>
    <string name="menu_search">Search</string>
    <string name="menu_members">Members</string>
    <string name="menu_done">Done</string>
    <string name="menu_rank_c">Last Seen</string>
    <string name="menu_rank_a">Last Communication</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_history">History</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_community_info">Community Info</string>
    <string name="menu_transactions">Transactions</string>
    <string name="community_settings">Settings</string>
    <string name="community_chain_status">Blockchain and Mining Status</string>
    <string name="community_chain_explorer">Blockchain Explorer</string>
    <string name="community_blacklist">Ban This Community</string>
    <string name="community_members">Engaged People in chat/tx</string>
    <string name="community_sync_rate">Sync Rate</string>
    <string name="community_miners_online">Miners Online</string>
    <string name="community_total_blocks">Total Blocks</string>
    <string name="community_mining_power">Mining Power</string>
    <string name="community_expiry_date">Expiry Date</string>
    <string name="community_renewal_date">Auto Renewal Date</string>
    <string name="community_info">Info</string>
    <string name="community_invite_link">Invite Link</string>
    <string name="community_qr_code">Share This Community</string>
    <string name="community_blacklist_tip" formatted="false"><Data><![CDATA[No messages from <font color="#477df9">%1$s</font> until
    removed from \"setting>privacy>blacklist\".]]></Data></string>
    <string name="community_input_hint">Message</string>
    <string name="community_users_stats_c">&#160;-&#160;Linked&#160;%1$d</string>
    <string name="community_users_stats_s">%1$s</string>
    <string name="community_users_discovering">Discovering</string>
    <string name="community_users_mining_overflow">Overflow</string>
    <string name="community_users_mining_preparation">Mining preparation&#8230;</string>
    <string name="community_users_mining_block">Mining Block</string>
    <string name="community_users_doze">Doze</string>
    <string name="common_loading">loading&#8230;</string>
    <string name="community_transaction">Pay People</string>
    <string name="chain_difficulty">Difficulty</string>
    <string name="chain_total_peers">Total Peers</string>
    <string name="chain_peers_blocks">Blocks Self-mined</string>
    <string name="chain_total_coins">Total Coins</string>
    <string name="chain_current_fork">Recent Fork Out</string>
    <string name="chain_block_number">Block Number</string>
    <string name="chain_block_hash">Hash</string>
    <string name="community_added_members_title">Add Members From Contacts</string>
    <string name="tx_median_fee" formatted="false"><Data><![CDATA[Transaction fee:<font color="#f19322"><u>&nbsp;&nbsp;%1$s&nbsp;&nbsp;</u></font>%2$s]]></Data></string>
    <string name="tx_item_name">Item Name</string>
    <string name="tx_link">Link - optional</string>
    <string name="tx_quantity">Quantity - optional</string>
    <string name="tx_location">Location - optional</string>
    <string name="tx_description">Description - optional</string>
    <string name="tx_invitation_title">Title</string>
    <string name="bot_airdrop_members_hit">Max number of airdropping members</string>
    <string name="bot_airdrop_total_coins_error">Airdrop total coins cannot exceed %1$s coins</string>
    <string name="bot_airdrop_coins_hit">Number of coins for each member</string>
    <string name="bot_airdrop_referral_bonus_total">Referral Bonus %1$s coins X 100 X 10 = %2$s</string>
    <string name="bot_airdrop_coins_total_value">Total&#160;%1$s&#160;coins</string>
</resources>