<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="listener"
            type="android.view.View.OnClickListener" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:background="@color/color_white"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar_include"
            layout="@layout/toolbar" />

        <ScrollView
            android:fillViewport="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/widget_size_15"
                android:layout_marginEnd="@dimen/widget_size_15">

                <EditText
                    android:id="@+id/et_members"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/widget_size_50"
                    android:layout_marginTop="@dimen/widget_size_20"
                    android:singleLine="true"
                    android:gravity="center_horizontal|center"
                    android:hint="@string/bot_airdrop_members_hit"
                    android:inputType="number"
                    android:maxLength="7"
                    android:autofillHints="@string/bot_airdrop_members_hit"
                    android:textAppearance="@style/TextAppearanceBody2"/>

                <EditText
                    android:id="@+id/et_coins"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/widget_size_50"
                    android:layout_marginTop="@dimen/widget_size_20"
                    android:singleLine="true"
                    android:gravity="center_horizontal|center"
                    android:hint="@string/bot_airdrop_coins_hit"
                    android:inputType="number"
                    android:maxLength="7"
                    android:autofillHints="@string/bot_airdrop_coins_hit"
                    android:textAppearance="@style/TextAppearanceBody2"/>

                <TextView
                    android:id="@+id/tv_referral_bnous"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bot_airdrop_referral_bonus_total"
                    android:layout_marginTop="@dimen/widget_size_15"
                    android:layout_gravity="center_horizontal"
                    android:textAppearance="@style/TextAppearanceBody2"/>

                <TextView
                    android:id="@+id/tv_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bot_airdrop_coins_total_value"
                    android:layout_marginTop="@dimen/widget_size_25"
                    android:layout_gravity="center_horizontal"
                    android:textAppearance="@style/TextAppearanceHeadline4"/>

                <TextView
                    android:visibility="invisible"
                    android:id="@+id/tv_total_error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/widget_size_35"
                    android:text="@string/bot_airdrop_total_coins_error"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/color_red"
                    android:textAppearance="@style/TextAppearanceBody3"/>

                <TextView
                    android:id="@+id/tv_submit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/primary_rect_round_bg"
                    android:layout_marginStart="@dimen/widget_size_20"
                    android:layout_marginEnd="@dimen/widget_size_20"
                    android:layout_marginTop="@dimen/widget_size_10"
                    android:text="@string/common_submit"
                    android:textColor="@color/color_white"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center_horizontal"
                    android:includeFontPadding="false"
                    android:paddingTop="@dimen/widget_size_10"
                    android:paddingBottom="@dimen/widget_size_10"
                    android:textAppearance="@style/TextAppearanceBody1"/>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>
</layout>